# cmake-start-up

./: .gitignore  CMakeLists.txt  Makefile  list_env.cmake  readme.md
src/: hello.cpp  main.cpp
test/: unit_tests.cpp
